# ckanext-iati-generator

./: .flake8  MANIFEST.in  README.md  babel.cfg  dev-requirements.txt  pyproject.toml  requirements.txt  test.ini
.github/workflows/: test-2.10.yml  test-2.11.yml
ckanext/iati_generator/: csv.py  decorators.py  helpers.py  plugin.py  utils.py
ckanext/iati_generator/actions/: iat_action.py  iati.py  procces.py  resources.py
ckanext/iati_generator/assets/: webassets.yml
ckanext/iati_generator/assets/css/: main.css
ckanext/iati_generator/assets/js/: copy_link.js
ckanext/iati_generator/auth/: iati.py
ckanext/iati_generator/blueprint/: admin.py  iati.py  public_iati.py
ckanext/iati_generator/helpers/: org_converter.py
ckanext/iati_generator/i18n/: ckanext-iati-generator.pot
ckanext/iati_generator/i18n/es/LC_MESSAGES/: ckanext-iati-generator.mo  ckanext-iati-generator.po  messages.mo  messages.po
ckanext/iati_generator/iati/: activities.py  org.py  process.py  resource.py
ckanext/iati_generator/migration/iati_generator/versions/: 1245d2d05f23_iati_files_model.py  1245d2d05f24_track_process.py  2c976b43b6d3_remove_iatifile_model.py  b1801f118da1_add_on_delete_cascade_to_iati_files_resource_id_fk.py  c1b2c1a3d93d_update_namespace.py
ckanext/iati_generator/model/: budget.py  budget_line.py  document.py  enums.py  expenditure.py  expense_line.py  narrative.py  org.py
ckanext/iati_generator/models/: enums.py  iati_files.py
ckanext/iati_generator/templates/: base.html
ckanext/iati_generator/templates/admin/: base.html  iati.html
ckanext/iati_generator/templates/iati/: admin.html  iati_files.html  iati_page.html
ckanext/iati_generator/templates/package/: iati_errors.html  iati_files.html  iati_page.html  read_base.html
ckanext/iati_generator/templates/package/snippets/: package_iati.html  resource_form.html
ckanext/iati_generator/tests/: conftest.py  factories.py  test_action_iati_file_list.py  test_actions_delete.py  test_actions_generate_organization_xml.py  test_actions_iati_file_create.py  test_actions_iati_file_update.py  test_actions_iati_resources_list.py  test_auth_iati.py  test_helper_file_types.py  test_helpers_slack.py  test_hepers.py  test_iati_files_list.py  test_iati_tab.py  test_namespace_filter.py  test_plugin.py  test_public_iati.py  test_require_sysadmin_decorator.py  test_seed_iati_integration_data.py  test_views.py
ckanext/iati_generator/tmp/: .keep
docs/: README.md  extra-fields.md
scripts/: QUICK_START.md  README.md  sample_data_config.yaml  seed_iati_integration_data.py
