[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-iati-generator"
# see tool.setuptools.dynamic in this file
dynamic = ["version"]
description = "CKAN extension to generate data in IATI format"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "OKFN", email = "info@okfn.org" },
    { name = "German Favaro", email = "germankay@gmail.com" }
]
maintainers = [
    { name = "OKFN", email = "info@okfn.org" },
    { name = "German Favaro", email = "germankay@gmail.com" }
]

keywords = ["CKAN", "iati-generator"]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "okfn-iati @ git+https://github.com/okfn/okfn_iati.git@main"
]

[project.urls]
"Homepage" = "https://github.com/okfn/ckanext-iati-generator"
"Issues" = "https://github.com/okfn/ckanext-iati-generator/issues"

[project.optional-dependencies]
# Optional dependencies can be listed here
# dev = [
#     "pytest",
#     "flake8",
# ]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["contrib", "docs", "tests*"]
namespaces = true

[tool.setuptools.package-data]
include = ["*"]

[tool.setuptools.dynamic]
version = {attr = "ckanext.iati_generator.__VERSION__"}

[tool.setuptools.data-files]
# Data files can be listed here
# Example:
# "my_data" = ["path/to/data/file"]

[project.scripts]
# Entry points for console scripts can be added here
# Example:
# your_command = "your_module:main"

[project.entry-points."ckan.plugins"]
iati_generator = "ckanext.iati_generator.plugin:IatiGeneratorPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.babel.extractors.ckanext]
"**.py" = "python"
"**.js" = "javascript"
"**/templates/**.html" = "ckan"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning"
]
addopts = "--ckan-ini test.ini"
