[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-iati-generator"
dynamic = ["version"]
description = "CKAN extension to generate data in IATI format"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "OKFN", email = "info@okfn.org" },
    { name = "German Favaro", email = "germankay@gmail.com" }
]

maintainers = [
    { name = "OKFN", email = "info@okfn.org" },
    { name = "German Favaro", email = "germankay@gmail.com" }
]

keywords = ["CKAN", "iati", "iati-generator", "extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "okfn-iati==0.3.0"
]

[project.urls]
Homepage = "https://github.com/okfn/ckanext-iati-generator"
Issues = "https://github.com/okfn/ckanext-iati-generator/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[project.scripts]
# Add CLI scripts here if needed
# example = "ckanext.iati_generator.cli:main"

[project.entry-points."ckan.plugins"]
iati_generator = "ckanext.iati_generator.plugin:IatiGeneratorPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["contrib", "docs", "tests*"]
namespaces = true

[tool.setuptools.package-data]
include = ["*"]

[tool.setuptools.dynamic]
version = {attr = "ckanext.iati_generator.__VERSION__"}

[tool.babel.extractors.ckanext]
"**.py" = "python"
"**.js" = "javascript"
"**/templates/**.html" = "ckan"

[tool.babel]
[tool.babel.extract_messages]
keywords = ["translate", "isPlural"]
add_comments = "TRANSLATORS:"
output_file = "ckanext/iati_generator/i18n/ckanext-iati-generator.pot"
width = 80

[tool.babel.init_catalog]
domain = "ckanext-iati-generator"
input_file = "ckanext/iati_generator/i18n/ckanext-iati-generator.pot"
output_dir = "ckanext/iati_generator/i18n"

[tool.babel.update_catalog]
domain = "ckanext-iati-generator"
input_file = "ckanext/iati_generator/i18n/ckanext-iati-generator.pot"
output_dir = "ckanext/iati_generator/i18n"
previous = true

[tool.babel.compile_catalog]
domain = "ckanext-iati-generator"
directory = "ckanext/iati_generator/i18n"
statistics = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning"
]
addopts = "--ckan-ini test.ini"
